--- a/book-network/book-network/src/main/resources/application-dev.yml
+++ b/book-network/book-network/src/main/resources/application-dev.yml
@@ -2,7 +2,7 @@ spring:
   datasource:
     url: jdbc:postgresql://localhost:5432/book_social_network
     username: postgres
-    password: postgres123
+    password: postgres
     driver-class-name: org.postgresql.Driver
   jpa:
     hibernate:
@@ -16,8 +16,8 @@ spring:
   mail:
     host: smtp.gmail.com
     port: 587
-    username: palarnab68@gmail.com
-    password: kmgfpghtvrggadnn
+    username: user@email.com
+    password: app-password
     properties:
       mail:
         smtp:
